cluster/apps/default/nextcloud/onlyoffice/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onlyoffice
  annotations:
    external-dns.alpha.kubernetes.io/controller: dns-controller
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - office.<secret:private-domain>
  rules:
    - backendRefs:
        - name: onlyoffice
          port: 80
